--- a/blog.guitarrapc.com/src/content/blog/2018/01/03/225037.md
+++ b/blog.guitarrapc.com/src/content/blog/2018/01/03/225037.md
@@ -7,7 +7,7 @@ heroImage: ""
 
 ちょうどおなかが空いたので作ってみた
 
-## 材料
+# 材料
 
 もの | 分量 | 価格 | 備考
 ---- | ---- | ---- | ----
@@ -23,9 +23,9 @@ heroImage: ""
 
 パルスイートの甘みは、甘みを強調したい料理ではあんまりよくない後味になりやすいのでおススメしにくい.... 普通に白砂糖なりはちみつがいいです。
 
-## レシピ
+# レシピ
 
-### 出汁作りフロー
+## 出汁作りフロー
 
 既製品の出汁を使う場合省略可。玉ねぎは別途切っておくこと。
 
@@ -46,19 +46,19 @@ heroImage: ""
 > [茅乃舎だし(8g×5袋入)｜茅乃舎(かやのや)｜久原本家通販サイト（公式）](https://www.kubara.jp/kayanoya/dashi/kayanoyadashi/571000/)
 
 
-### 牛丼作りフロー
+## 牛丼作りフロー
 
 ![牛丼作りフロー](/2018/01/03/uml_gyudon.png)
 
 
 事前に出汁作りしておくこと。出汁を既製品使うなら、玉ねぎだけ先に切っておく
 
-#### 玉ねぎ切る
+### 玉ねぎ切る
 
 1. 半分は2mm の細切り
 1. 1個は 1cm 幅で切る
 
-#### 深めのフライパンで炒め調理
+### 深めのフライパンで炒め調理
 
 1. 香り付けたいのでゴマ油ひく
     - 焦げ対策ではなかった
@@ -69,7 +69,7 @@ heroImage: ""
 
 ![ステップ1](/2018/01/03/step1.png)
 
-#### 味付け
+### 味付け
 
 1. 火を中火にする
 1. 作っておいた出汁か既製品の出汁をいれる
@@ -84,7 +84,7 @@ heroImage: ""
 
 ![ステップ2](/2018/01/03/step2.png)
 
-#### 落し蓋をして煮詰める
+### 落し蓋をして煮詰める
 
 1. 落し蓋して汁を煮詰めつつ速度を抑える
     - 味をしみこませる時間を稼ぎつつ汁を煮詰める時短手法
@@ -92,7 +92,7 @@ heroImage: ""
 
 ![ステップ3](/2018/01/03/step3.png)
 
-#### 煮詰め終わり
+### 煮詰め終わり
 
 1. 汁が半分ぐらいになってればok
 1. 味を調節
@@ -104,13 +104,13 @@ heroImage: ""
 
 ![ステップ4](/2018/01/03/step4.png)
 
-#### 実食
+### 実食
 
 汁の残し具合、煮詰め具合でつゆだくでもなんでもいけます。玉子を落とすのもありですね。
 
 ![ステップ5](/2018/01/03/step5.png)
 
-## 感想
+# 感想
 
 美味しかったです。ここにシイタケとかあるとさらにおいしそうですが、すき焼き一直線なので、牛丼はシンプルがいいのかもしれません。
 
@@ -118,6 +118,6 @@ heroImage: ""
 
 醤油は甘めの味じゃない方がおいしい気がします。
 
-## レシピの uml
+# レシピの uml
 
 > [guitarrapc/Dashi_Recipe.uml](https://gist.github.com/guitarrapc/600a776949b601d36cdb7d70d40563d4)
